# abbot-rs

./: .env.example  .gitignore  Cargo.toml  README.md
src/: filters.rs  handlers.rs  main.rs  tasks.rs
src/models/: gitlab.rs  mod.rs  webex.rs
