[package]
name = "abbot"
version = "0.1.0"
authors = ["boxdot <d@zerovolt.org>"]
edition = "2018"

[dependencies]
gitlab = "0.1209.1"
webex = "0.1.3"
warp = "0.2.2"
tokio = { version = "0.2.20", features = ["macros", "sync"] }
pretty_env_logger = "0.4.0"
log = "0.4.8"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
dotenv = "0.15.0"
regex = "1.3.7"
lazy_static = "1.4.0"
url = "2.1.1"
chrono = "0.4.11"
